charts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - host: covidvaccine-vaers.info #Hostname we want
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-service #Bind it to the service of our app
            port:
              number: 80 #Internal port
